[workspace.package]
version = "0.18.0"
rust-version = "1.79.0" # __RUST_STABLE_VERSION_MARKER__ (keep in sync)
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/codegen/ebnf",
    "crates/codegen/language/definition",
    "crates/codegen/language/internal_macros",
    "crates/codegen/language/macros",
    "crates/codegen/language/tests",
    "crates/codegen/runtime/cargo/crate",
    "crates/codegen/runtime/cargo/wasm",
    "crates/codegen/runtime/generator",
    "crates/codegen/runtime/npm/package",
    "crates/codegen/spec",
    "crates/codegen/testing",

    "crates/infra/cli",
    "crates/infra/utils",

    "crates/metaslang/bindings",
    "crates/metaslang/cst",
    "crates/metaslang/graph_builder",

    "crates/solidity/inputs/language",
    "crates/solidity/outputs/cargo/cli",
    "crates/solidity/outputs/cargo/crate",
    "crates/solidity/outputs/cargo/tests",
    "crates/solidity/outputs/cargo/wasm",
    "crates/solidity/outputs/npm/package",
    "crates/solidity/outputs/spec",
    "crates/solidity/testing/perf",
    "crates/solidity/testing/sanctuary",
    "crates/solidity/testing/snapshots",
    "crates/solidity/testing/solc",

    "crates/testlang/inputs/language",
    "crates/testlang/outputs/cargo/crate",
    "crates/testlang/outputs/cargo/tests",
    "crates/testlang/outputs/cargo/wasm",
    "crates/testlang/outputs/npm/package",
]

[workspace.dependencies]
#
# Internal
#
codegen_ebnf = { path = "crates/codegen/ebnf", version = "0.18.0" }
codegen_language_definition = { path = "crates/codegen/language/definition", version = "0.18.0" }
codegen_language_internal_macros = { path = "crates/codegen/language/internal_macros", version = "0.18.0" }
codegen_language_macros = { path = "crates/codegen/language/macros", version = "0.18.0" }
codegen_language_tests = { path = "crates/codegen/language/tests", version = "0.18.0" }
codegen_runtime_cargo_crate = { path = "crates/codegen/runtime/cargo/crate", version = "0.18.0" }
codegen_runtime_cargo_wasm = { path = "crates/codegen/runtime/cargo/wasm", version = "0.18.0" }
codegen_runtime_generator = { path = "crates/codegen/runtime/generator", version = "0.18.0" }
codegen_runtime_npm_package = { path = "crates/codegen/runtime/npm/package", version = "0.18.0" }
codegen_spec = { path = "crates/codegen/spec", version = "0.18.0" }
codegen_testing = { path = "crates/codegen/testing", version = "0.18.0" }

infra_cli = { path = "crates/infra/cli", version = "0.18.0" }
infra_utils = { path = "crates/infra/utils", version = "0.18.0" }

metaslang_bindings = { path = "crates/metaslang/bindings", version = "0.18.0" }
metaslang_graph_builder = { path = "crates/metaslang/graph_builder", version = "0.18.0" }
metaslang_cst = { path = "crates/metaslang/cst", version = "0.18.0" }

slang_solidity = { path = "crates/solidity/outputs/cargo/crate", version = "0.18.0" }
slang_solidity_cli = { path = "crates/solidity/outputs/cargo/cli", version = "0.18.0" }
solidity_cargo_tests = { path = "crates/solidity/outputs/cargo/tests", version = "0.18.0" }
solidity_cargo_wasm = { path = "crates/solidity/outputs/cargo/wasm", version = "0.18.0" }
solidity_language = { path = "crates/solidity/inputs/language", version = "0.18.0" }
solidity_npm_package = { path = "crates/solidity/outputs/npm/package", version = "0.18.0" }
solidity_spec = { path = "crates/solidity/outputs/spec", version = "0.18.0" }
solidity_testing_perf = { path = "crates/solidity/testing/perf", version = "0.18.0" }
solidity_testing_sanctuary = { path = "crates/solidity/testing/sanctuary", version = "0.18.0" }
solidity_testing_snapshots = { path = "crates/solidity/testing/snapshots", version = "0.18.0" }
solidity_testing_solc = { path = "crates/solidity/testing/solc", version = "0.18.0" }

slang_testlang = { path = "crates/testlang/outputs/cargo/crate", version = "0.18.0" }
testlang_cargo_tests = { path = "crates/testlang/outputs/cargo/tests", version = "0.18.0" }
testlang_cargo_wasm = { path = "crates/testlang/outputs/cargo/wasm", version = "0.18.0" }
testlang_language = { path = "crates/testlang/inputs/language", version = "0.18.0" }
testlang_npm_package = { path = "crates/testlang/outputs/npm/package", version = "0.18.0" }

#
# External
#
anyhow = { version = "1.0.89", features = ["backtrace", "std"] }
ariadne = { version = "0.2.0" }
# Currently 'bencher' backend API is under development/unstable.
# They recommend always running with the latest CLI version from 'main' until it is stabilized.
bencher_cli = { git = "https://github.com/bencherdev/bencher", branch = "main" }
cargo-edit = { version = "0.12.3" }
cargo-emit = { version = "0.2.1" }
cargo-nextest = { version = "0.9.72" }
cargo-xwin = { version = "0.14.2" }
cargo-zigbuild = { version = "0.18.3" }
clap = { version = "4.5.13", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.5.13" }
console = { version = "0.15.8" }
derive-new = { version = "0.6.0" }
env_logger = { version = "0.11.5" }
iai-callgrind = { version = "0.12.3" }
iai-callgrind-runner = { version = "0.12.3" }
ignore = { version = "0.4.23" }
indexmap = { version = "2.5.0", features = ["serde"] }
indicatif = { version = "0.17.8", features = ["in_memory"] }
indoc = { version = "2.0.5" }
Inflector = { version = "0.11.4" }
itertools = { version = "0.13.0" }
log = { version = "0.4.22" }
markdown = { version = "0.3.0" }
nom = { version = "7.1.3" }
num-format = { version = "0.4.4" }
once_cell = { version = "1.19.0" }
paste = { version = "1.0.15" }
proc-macro2 = { version = "1.0.86" }
public-api = { version = "0.37.0" }
quote = { version = "1.0.37" }
rayon = { version = "1.10.0" }
regex = { version = "1.11.0" }
reqwest = { version = "0.12.8", features = ["blocking"] }
rustdoc-json = { version = "0.9.2" }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
similar-asserts = { version = "1.6.0" }
smallvec = { version = "1.7.0", features = ["union"] }
stack-graphs = { version = "0.13.0" }
string-interner = { version = "0.17.0", features = [
    "std",
    "inline-more",
    "backends",
] }
strum = { version = "0.26.3" }
strum_macros = { version = "0.26.4" }
syn = { version = "2.0.79", features = [
    "fold",
    "full",
    "extra-traits",
    "parsing",
    "printing",
] }
tempfile = { version = "3.13.0" }
tera = { version = "1.20.0" }
thiserror = { version = "1.0.64" }
toml = { version = "0.8.19" }
trybuild = { version = "1.0.99" }
url = { version = "2.4.1", features = ["serde"] }
wasm-tools = { version = "1.216.0" }
wit-bindgen = { version = "0.30.0" }

[workspace.lints.rust]
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
meta_variable_misuse = "warn"
# Rust 2018 idioms that are not yet warn-by-default:
elided_lifetimes_in_paths = "warn"
unused_extern_crates = "warn"
explicit_outlives_requirements = "warn"

[workspace.lints.clippy]
# Lints that are enabled (warn/deny) by default
all = "warn"
# Cargo
cargo = "warn"                                              # Warn about Cargo.toml issues, except...
multiple_crate_versions = { level = "allow", priority = 1 } # Not possible to deduplicate, should be done periodically ourselves
# Restriction (optional, neutral lints)
clone_on_ref_ptr = "warn"                # Prefer using 'Arc::clone(x)' instead of 'x.clone()' to make it clear when we are doing an expensive clone
exit = "warn"                            # Prefer not `process::exit`ing directly
rest_pat_in_fully_bound_structs = "warn" # Prefer not to use `..` in fully bound structs
verbose_file_reads = "warn"              # Prefer simpler and more concise `fs::read_to_string`
# Pedantic
pedantic = "warn"                                                      # Warn about pedantic lints, except...
assigning_clones = { level = "allow", priority = 1 }                   # `clone_from()` is less readable, and is rarely used/implemented
match_same_arms = { level = "allow", priority = 1 }                    # It's often clearer to have the same arm twice
missing_errors_doc = { level = "allow", priority = 1 }                 # Most of our code is internal; let's not clutter the docs until...
missing_panics_doc = { level = "allow", priority = 1 }                 # ... we care about the public documentation in our shipped crates
module_name_repetitions = { level = "allow", priority = 1 }            # It seems we prefer it this way; we'd need to discuss that
must_use_candidate = { level = "allow", priority = 1 }                 # Overzealous, we'd have to `[must_use]` a lot of things
needless_raw_string_hashes = { level = "allow", priority = 1 }         # It is easier to use hashes consistently on all tests/examples in a file
redundant_closure_for_method_calls = { level = "allow", priority = 1 } # Not always clearer, let's not pepper `allow`s whenever needed
# Nursery
collection_is_never_read = "warn" # Lint against collections not used after creation
equatable_if_let = "warn"         # Prefer regular `==` checks over Yoda `if let $pat = $value`
useless_let_if_seq = "warn"       # Use idiomatic direct assignment of `let $val = if $cond { .. } else { .. };`
redundant_else = "warn"           # Warn about redundant `else` blocks
