[workspace]
members = [
    "crates/codegen/schema",
    "crates/codegen/ebnf",
    "crates/codegen/parser",
    "crates/codegen/spec",
    "crates/codegen/utils",
    "crates/solidity/outputs/documentation",
    "crates/solidity/outputs/rust/cli",
    "crates/solidity/outputs/rust/lib",
    "crates/solidity/outputs/typescript/lib",
]

[profile.dev]
debug = 0
incremental = true

[profile.release]
lto = true
