[workspace]
members = [
    "crates/codegen/schema",
    "crates/codegen/ebnf",
    "crates/codegen/parser",
    "crates/codegen/spec",
    "crates/codegen/testing",
    "crates/codegen/utils",
    "crates/solidity/outputs/documentation",
    "crates/solidity/outputs/rust/cli",
    "crates/solidity/outputs/rust/lib",
    "crates/solidity/outputs/rust/tests",
    "crates/solidity/outputs/typescript/lib",
]

[workspace.package]
version = "0.0.0"
rust-version = "1.64.0" # Keep this version in sync with the hermit binary at "REPO_ROOT/bin/.rust-VERSION.pkg"
edition = "2021"

[profile.dev]
debug = 0
incremental = true

[profile.release]
lto = true
