[workspace]
members = [
    "crates/codegen/ebnf",
    "crates/codegen/parser",
    "crates/codegen/schema",
    "crates/codegen/spec",
    "crates/codegen/testing",
    "crates/codegen/utils",
    "crates/solidity/outputs/documentation",
    "crates/solidity/outputs/rust/cli",
    "crates/solidity/outputs/rust/lib",
    "crates/solidity/outputs/rust/tests",
    "crates/solidity/outputs/typescript/lib",
]

[workspace.package]
version = "0.0.0"
rust-version = "1.64.0" # Keep this version in sync with the hermit binary at "REPO_ROOT/bin/.rust-VERSION.pkg"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.66", features = ["backtrace", "std"] }
ariadne = { version = "0.1.5" }
chumsky = { version = "0.8.0" }
clap = { version = "4.0.14", features = ["derive"] }
codegen_ebnf = { path = "crates/codegen/ebnf" }
codegen_parser = { path = "crates/codegen/parser" }
codegen_schema = { path = "crates/codegen/schema" }
codegen_spec = { path = "crates/codegen/spec" }
codegen_testing = { path = "crates/codegen/testing" }
codegen_utils = { path = "crates/codegen/utils" }
indexmap = { version = "1.8.1", features = ["serde"] }
Inflector = { version = "0.11.4" }
itertools = { version = "0.10.3" }
jsonschema = { version = "0.16.0" }
napi = { version = "2.10.1", features = ["compat-mode", "napi8", "serde-json"] }
napi-build = { version = "2.0.1" }
napi-derive = { version = "2.9.1" }
patricia_tree = { version = "0.4.0" }
proc-macro2 = { version = "1.0.38" }
quote = { version = "1.0.18" }
regex = { version = "1.5.6" }
semver = { version = "1.0.9", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0.81" }
serde_yaml = { version = "0.9.14" }
similar-asserts = { version = "1.4.2" }
solidity_rust_lib = { path = "crates/solidity/outputs/rust/lib" }
typed-arena = { version = "2.0.1" }
unicode_names2 = { version = "0.6.0" }
walkdir = { version = "2.3.2" }

[profile.dev]
debug = 0
incremental = true

[profile.release]
lto = true
