[package]
name = "syntax-generator"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
indexmap = { version = "1.8.1", features = ["serde"] }
semver = { version = "1.0.9", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_yaml = "0.8.24"
