[package]
name = "syntax-generator"
version = "0.0.0"
edition = "2021"

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"
clap = { version = "3.1.6", features = ["derive"] }
convert_case = "0.5.0"
indexmap = { version = "1.8.1", features = ["serde"] }
proc-macro2 = "1.0.38"
quote = "1.0.18"
semver = { version = "1.0.9", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_yaml = "0.8.24"
