[package]
name = "version-breaks"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
indicatif = "0.16.2"
rayon = "1.5.1"
regex = "1.5"
reqwest = { version = "0.11.10", features = ["blocking"] }
semver = "1.0.7"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
