[package]
name = "codegen_ebnf"
description = "EBNF snippet serializer for language definitions"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
codegen_schema = { workspace = true }
codegen_language_definition = { workspace = true }
derive-new = { workspace = true }
indexmap = { workspace = true }
Inflector = { workspace = true }
semver = { workspace = true }
