[package]
name = "codegen_generator"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
codegen_ebnf = { workspace = true }
codegen_v2_parser = { workspace = true }
indexmap = { workspace = true }
Inflector = { workspace = true }
infra_utils = { workspace = true }
language_definition = { workspace = true }
language_v2_definition = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[lints]
workspace = true
