[package]
name = "codegen_parser_templates"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
semver = { workspace = true }
ariadne = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
