[package]
name = "codegen_runner"
description = "Using a cargo binary rather than a build task, to avoid invalidating the build tree when only the inputs change."
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
codegen_language_definition = { workspace = true }
codegen_runtime_generator = { workspace = true }
codegen_spec = { workspace = true }
codegen_testing = { workspace = true }
infra_utils = { workspace = true }
rayon = { workspace = true }
semver = { workspace = true }
solidity_language = { workspace = true }
testlang_language = { workspace = true }

[lints]
workspace = true
