[package]
name = "codegen_runner"
description = "Generates the artifacts required to use slang."
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
codegen_language_definition = { workspace = true }
codegen_runtime_generator = { workspace = true }
codegen_spec = { workspace = true }
codegen_testing = { workspace = true }
infra_utils = { workspace = true }
rayon = { workspace = true }
solidity_language = { workspace = true }

[lints]
workspace = true
