[package]
name = "codegen_schema"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[build-dependencies]
anyhow = { workspace = true }
codegen_utils = { workspace = true }
indexmap = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies]
codegen_utils = { workspace = true }
indexmap = { workspace = true }
Inflector = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
yaml-rust = { workspace = true }
